# startgg

./: README.md  pyproject.toml  queries.graphql
.github/workflows/: publish.yml  test.yml
startgg/: __init__.py  async_base_client.py  attendee_count.py  attendee_count_events.py  base_model.py  client.py  enums.py  event_entrants.py  event_sets.py  event_standings.py  event_standings_race_format.py  exceptions.py  gamer_tag.py  in_progress_results.py  in_progress_set.py  input_types.py  last_result.py  league_schedule.py  league_standings.py  phase_group_sets.py  phase_groups_by_phase.py  phase_seeds.py  phase_seeds_teams.py  phase_sets.py  pool_seeds.py  prefix_search_attendees.py  scalars.py  set.py  set_entrants.py  sets.py  sets_at_station.py  shop.py  stream_queue_on_tournament.py  tournaments_by_country.py  tournaments_by_owner.py  tournaments_by_proximity.py  tournaments_by_state.py  tournaments_by_videogame.py  tournaments_by_videogames.py  upcoming.py
tests/: test_queries.py
